--- a/index.html
+++ b/index.html
@@ -5,29 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link href="style.css" rel="stylesheet">
+    <script src="js-file.js" defer></script>
 </head>
 <body>
     <div id="main-container">
         <div id="display">
-            01234567890
+            <div id="mini-display"></div>
+            <div id="main-display">
+                01234567890
+            </div>
         </div>
         <div id="button-container">
-            <button id="add">+</button>
-            <button id="subtract">-</button>
-            <button id="mulitply">x</button>
-            <button id="divide">/</button>
-            <button id="operate">=</button>
             <button id="clear">Clear</button>
-            <button id="9">9</button>
-            <button id="8">8</button>
-            <button id="7">7</button>
-            <button id="6">6</button>
-            <button id="5">5</button>
-            <button id="4">4</button>
-            <button id="3">3</button>
-            <button id="2">2</button>
-            <button id="1">1</button>
-            <button id="0">0</button>
+            <button class="operator" id="+">+</button>
+            <button class="operator" id="-">-</button>
+            <button class="operator" id="x">x</button>
+            <button class="operator" id="/">/</button>
+            <button id="evaluate">=</button>
+            <button class="number" id="9">9</button>
+            <button class="number" id="8">8</button>
+            <button class="number" id="7">7</button>
+            <button class="number" id="6">6</button>
+            <button class="number" id="5">5</button>
+            <button class="number" id="4">4</button>
+            <button class="number" id="3">3</button>
+            <button class="number" id="2">2</button>
+            <button class="number" id="1">1</button>
+            <button class="number" id="0">0</button>
+            <button class="number" id=".">.</button>
+            <button id="sign">+/-</button>
         </div>
     </div>
 </body>
