Add commented codes for one by one text char update

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <button class="operator" id="x">x</button>
             <button class="operator" id="/">/</button>
             <button id="evaluate">=</button>
+            <button id="backspace">-></button>
             <button class="number" id="9">9</button>
             <button class="number" id="8">8</button>
             <button class="number" id="7">7</button>
@@ -32,7 +33,7 @@
             <button class="number" id="2">2</button>
             <button class="number" id="1">1</button>
             <button class="number" id="0">0</button>
-            <button class="number" id=".">.</button>
+            <button id="decimal-point">.</button>
             <button id="sign">+/-</button>
         </div>
     </div>
